* 2.0.0
    - Has not backward compatibility
    - Use Access 2
    - Triple store Resource object in secreted string for efficient indexing
    - Triple can has other properties like startDate, endDate, ...
    - Index revisited

* 1.9.0
    - Use knowledge-core
    - Add versioning

* 1.8.0
    - Add approve/reject on insert triple
    - Add service remove triple
    - Change search service and add use regex to it

* 1.7.0
    - Add language to export

* 1.2.0
    - Add Expert Service

* 1.1.0
    - Add context
    - Add v1 Service: search
    - Add v1 Service: get triple
    - Add v1 Service: export triple
    - Add multiple url to a source
    - Add parameters to a source
    - Add TypedValue to v1 insert service for object


* 1.0.0
    - Soap web service
    - Rest web service
    - Swagger UI
    - Insert triples metadata on mongodb





