@@ -4,6 +4,7 @@ import ir.ac.iust.dml.kg.knowledge.commons.MongoDaoUtils;
 import ir.ac.iust.dml.kg.knowledge.commons.PagingList;
 import ir.ac.iust.dml.kg.knowledge.store.access2.dao.IOntologyDao;
 import ir.ac.iust.dml.kg.knowledge.store.access2.entities.Ontology;
+import ir.ac.iust.dml.kg.knowledge.store.access2.entities.TripleState;
 import org.bson.types.ObjectId;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
@@ -52,7 +53,7 @@ public class OntologyDaoImpl2 implements IOntologyDao {
     }
 
     @Override
-    public PagingList<Ontology> search(String context, String subject, String predicate, String object, int page, int pageSize) {
+    public PagingList<Ontology> search(String context, String subject, String predicate, String object, TripleState state, int page, int pageSize) {
         final Query query = new Query();
         if (context != null)
             query.addCriteria(Criteria.where("context").is(context));
@@ -62,6 +63,8 @@ public class OntologyDaoImpl2 implements IOntologyDao {
             query.addCriteria(Criteria.where("predicate").is(predicate));
         if (object != null)
             query.addCriteria(Criteria.where("object.value").is(object));
+        if (state != null)
+            query.addCriteria(Criteria.where("state").is(state));
         return MongoDaoUtils.paging(op, Ontology.class, query, page, pageSize);
     }
 }
